@startuml
package com.yonatankarp.iterator {

  enum ItemType {
    ANY
    POTION
    RING
    WEAPON
  }

  class Item <<data>> {
    + type : ItemType
    + name : String
  }

  class TreasureChest {
    + items : List<Item>
    + iterator(itemType : ItemType) : Iterator<Item>
  }

  class TreasureChestItemIterator {
    - items : List<Item>
    - type : ItemType
    - currentIndex : Int
    + hasNext() : Boolean
    + next() : Item
  }

  class TreeNode<T : Comparable<T>> {
    + value : T
    + left : TreeNode<T>?
    + right : TreeNode<T>?
    + insert(newValue : T)
  }

  class BstIterator<T : Comparable<T>> {
    - stack : ArrayDeque<TreeNode<T>>
    + hasNext() : Boolean
    + next() : TreeNode<T>
  }

  TreasureChest --> TreasureChestItemIterator : creates
  TreasureChest o-- Item
  Item --> ItemType
  TreasureChestItemIterator ..|> Iterator
  BstIterator ..|> Iterator
  BstIterator --> TreeNode
}
@enduml